# alec-codec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-HEADER.txt  PLAN.md  README.fr.md  README.md  README_fr.md  RELEASE_NOTES_v1.2.0.md  ROADMAP.md  SECURITY.md  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build-ffi.yml  ci.yml  release.yml
alec-complexity/: Cargo.toml  README.md
alec-complexity/src/: anomaly.rs  baseline.rs  config.rs  delta.rs  engine.rs  event.rs  lib.rs  snapshot.rs  structure.rs
alec-complexity/src/input/: gateway.rs  generic.rs  mod.rs
alec-complexity/tests/: complexity_tests.rs
alec-exporter/: Cargo.toml  Dockerfile  README.md
alec-exporter/src/: main.rs  metrics.rs  replay.rs
alec-ffi/: Cargo.toml  README.md  build.rs
alec-ffi/examples/: example.c
alec-ffi/include/: alec.h  alec_generated.h
alec-ffi/src/: lib.rs
alec-ffi/tests/: context_load_safety.rs  decoder_feed_values.rs  decoder_roundtrip.rs  encoder_context_buffer.rs  zero_heap_allocator_proof.rs  zero_heap_context_save.rs
alec-gateway/: Cargo.toml  README.md
alec-gateway/examples/: basic_gateway.rs
alec-gateway/src/: aggregator.rs  channel_manager.rs  config.rs  error.rs  frame.rs  gateway.rs  lib.rs
alec-gateway/src/metrics/: alignment.rs  config.rs  engine.rs  mod.rs  payload.rs  resilience.rs  signal.rs  snapshot.rs  window.rs
alec-gateway/tests/: integration_tests.rs  metrics_tests.rs
alec-grafana/: README.md  docker-compose.yml
alec-grafana/grafana/dashboards/: alec-overview.json
alec-grafana/grafana/provisioning/dashboards/: default.yml
alec-grafana/grafana/provisioning/datasources/: prometheus.yml
alec-grafana/prometheus/: prometheus.yml
alec-grafana/scripts/: demo.sh
alec-testdata/: Cargo.toml  README.md
alec-testdata/examples/: complexity_demo.rs  generate_dataset.rs  run_through_gateway.rs
alec-testdata/scenarios/: correlation_break.json  gradual_drift.json  redundancy_loss.json  sensor_failure.json  sudden_spike.json
alec-testdata/src/: anomalies.rs  dataset.rs  generator.rs  lib.rs  manifest.rs  patterns.rs  scenario.rs
alec-testdata/src/industries/: agriculture.rs  energy.rs  logistics.rs  manufacturing.rs  mod.rs  satellite.rs  smart_city.rs
benches/: encoding.rs
benches/comparison/: README.md  benchmark_comparison.py  benchmark_variable.py  generate_samples.py  requirements.txt
contexts/demo/: demo_counter_v1.alec-context  demo_humidity_v1.alec-context  demo_temperature_v1.alec-context
data/samples/: README.md  hvac_24h.csv  industrial_1h.csv  smartgrid_24h.csv
demo/: README.md  docker-compose.yml
demo/complexity/: Dockerfile  INSTALL.md  main.py  requirements.txt
demo/grafana/provisioning/dashboards/: alec-demo.json  dashboards.yml
demo/grafana/provisioning/datasources/: datasources.yml
demo/injection/: Dockerfile  main.py  requirements.txt
demo/prometheus/: prometheus.yml
demo/simulator/: Dockerfile  generate_dataset.py  main.py  requirements.txt  sensors.py
demo/simulator/profiles/: agricultural.json
docs/: ARCHITECTURE.md  COMPLEXITY.md  CONFIGURATION.md  CONTEXT.md  GATEWAY.md  INTEGRATION.md  JSON_SCHEMAS.md  METRICS.md  TODO.md  applications.md  architecture.md  faq.md  getting-started.md  glossary.md  graphic-charter.md  integration-assessment.md  intra-application.md  non-regression.md  protocol-reference.md  security.md  technical-reference.md
docs/alec-ffi/: README-updates.md
docs/alec-ffi/docs/: FFI.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/advanced/: channels.md  fleet.md  performance.md  security.md
docs/book/src/appendix/: changelog.md  faq.md  troubleshooting.md
docs/book/src/deployment/: checklist.md  configuration.md  monitoring.md
docs/book/src/getting-started/: concepts.md  installation.md  quick-start.md
docs/book/src/guide/: classification.md  context.md  decoding.md  encoding.md  synchronization.md
docs/book/src/reference/: api.md  errors.md  protocol.md
docs/diagrams/: architecture.mermaid  baseline-lifecycle.mermaid  data-flow.mermaid  metrics-pipeline.mermaid
examples/: 01-feature-iteration.md  02-refactor.md  03-bugfix.md  emitter_receiver.rs  fleet_demo.rs  freertos_em500.c  generate_preloads.rs  metrics_demo.rs  simple_sensor.rs
prompts/: 00_analyse_projet.md  01_ci_cd_setup.md  02_checksum_implementation.md  03_metrics_compression.md  04_contexte_evolutif.md  05_synchronisation_auto.md  06_mode_flotte.md  07_securite.md  08_robustesse.md  09_documentation.md  10_release.md  bugfix.prompt.md  feature.prompt.md  non-regression.prompt.md  refactor.prompt.md  security-review.prompt.md
satellite_demo/: README.md  docker-compose.yml
satellite_demo/grafana/provisioning/dashboards/: dashboards.yml  satellite-iot-monitor.json
satellite_demo/grafana/provisioning/datasources/: datasources.yml
satellite_demo/prometheus/: prometheus.yml
satellite_demo/simulator/: Dockerfile  main.py  requirements.txt
satellite_demo/simulator/profiles/: maritime.json
scripts/: add_headers.sh
src/: channel.rs  classifier.rs  context.rs  decoder.rs  encoder.rs  error.rs  fleet.rs  health.rs  lib.rs  main.rs  metrics.rs  protocol.rs  recovery.rs  security.rs  sync.rs  tls.rs
src/context/: mod.rs  preload.rs
tests/: compression_diagnostic.rs  multi_adaptive.rs  preload_tests.rs  protocol_header_v2.rs  stress.rs
