[package]
name = "alec-exporter"
version = "0.1.0"
edition = "2021"
authors = ["David Martin Venti"]
license = "AGPL-3.0 OR Commercial"
description = "Prometheus exporter for ALEC metrics"
repository = "https://github.com/zeekmartin/alec-codec"
keywords = ["prometheus", "metrics", "iot", "monitoring"]
categories = ["network-programming"]

[dependencies]
# ALEC crates
alec-gateway = { path = "../alec-gateway", features = ["metrics"] }
alec-complexity = { path = "../alec-complexity" }
alec-testdata = { path = "../alec-testdata", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"

# Prometheus metrics
prometheus = "0.13"
lazy_static = "1.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV parsing for replay
csv = "1.3"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Temp files for testing
tempfile = { version = "3", optional = true }

[features]
default = ["replay"]
replay = ["alec-testdata", "tempfile"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "alec-exporter"
path = "src/main.rs"
