[package]
name = "alec-ffi"
version = "1.3.5"
edition = "2021"
rust-version = "1.70"
authors = ["David Martin Venti <contact@alec-codec.com>"]
description = "C/C++ bindings for ALEC compression library"
license = "AGPL-3.0"
repository = "https://github.com/zeekmartin/alec-codec"
readme = "README.md"
keywords = ["compression", "iot", "ffi", "c-bindings", "embedded"]
categories = ["compression", "external-ffi-bindings"]

[lib]
name = "alec_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
alec = { path = "..", version = "1.3.5", default-features = false }
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh64"] }
embedded-alloc = { version = "0.6", optional = true, default-features = false, features = ["llff"] }
cortex-m = { version = "0.7", optional = true, features = ["critical-section-single-core"] }
# Recovery / gap-detection diagnostics. `log` is a zero-cost facade
# when no subscriber is installed (the default on embedded) and is
# no_std compatible, so we always compile it in.
log = { version = "0.4", default-features = false }

[build-dependencies]
cbindgen = "0.26"

[features]
default = ["std"]
std = ["alec/std"]
no_std = ["alec/no_std"]
bare-metal = ["no_std", "embedded-alloc", "cortex-m"]
zephyr = ["no_std"]

[dev-dependencies]
tempfile = "3.10"
