[package]
name = "alec-testdata"
version = "0.1.0"
edition = "2021"
authors = ["David Martin Venti"]
license = "AGPL-3.0 OR Commercial"
description = "Realistic test dataset generator for ALEC ecosystem"
repository = "https://github.com/zeekmartin/alec-codec"
keywords = ["iot", "testing", "datasets", "sensor", "simulation"]
categories = ["simulation", "development-tools::testing"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Optional: Integration with ALEC crates
alec-gateway = { path = "../alec-gateway", optional = true, features = ["metrics"] }
alec-complexity = { path = "../alec-complexity", optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
gateway = ["alec-gateway"]
complexity = ["alec-complexity"]
full = ["gateway", "complexity"]

[[example]]
name = "generate_dataset"
path = "examples/generate_dataset.rs"

[[example]]
name = "run_through_gateway"
path = "examples/run_through_gateway.rs"
required-features = ["gateway"]

[[example]]
name = "complexity_demo"
path = "examples/complexity_demo.rs"
required-features = ["complexity"]
